--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "fetch": "^1.1.0"
+    "axios": "^0.21.1",
+    "express": "^4.17.1"
   }
 }
