Add handlebars support and results page

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd nodemon src/index.js -e js,html,css"
+    "dev": "env-cmd nodemon src/index.js -e js,html,css,hbs"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "hbs": "^4.1.2"
   }
 }
